--- a/2-03_uehara.ipynb
+++ b/2-03_uehara.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,65 +84,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "type object 'decimal.Decimal' has no attribute 'from_froat'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-dc51a6903ea2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mDecimal\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_froat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: type object 'decimal.Decimal' has no attribute 'from_froat'"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "Decimal('0.5')"
+     },
+     "metadata": {},
+     "execution_count": 4
     }
    ],
    "source": [
-    "Decimal.from_froat(0.5)"
+    "Decimal.from_float(0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "type object 'decimal.Decimal' has no attribute 'from_froat'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-4214fdae1d1b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mDecimal\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_froat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: type object 'decimal.Decimal' has no attribute 'from_froat'"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "Decimal('0.1000000000000000055511151231257827021181583404541015625')"
+     },
+     "metadata": {},
+     "execution_count": 5
     }
    ],
    "source": [
-    "Decimal.from_froat(0.1)"
+    "Decimal.from_float(0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "type object 'decimal.Decimal' has no attribute 'from_froat'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-4c0c79b613b4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mDecimal\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_froat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: type object 'decimal.Decimal' has no attribute 'from_froat'"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "Decimal('0.299999999999999988897769753748434595763683319091796875')"
+     },
+     "metadata": {},
+     "execution_count": 6
     }
    ],
    "source": [
-    "Decimal.from_froat(0.3)"
+    "Decimal.from_float(0.3)"
    ]
   },
   {
@@ -204,7 +195,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1593399866977",
+   "name": "python_defaultSpec_1593400424944",
    "display_name": "Python 3.8.2 32-bit"
   }
  },
