--- a/2-12.ipynb
+++ b/2-12.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1595837152284",
+   "name": "python_defaultSpec_1596706359646",
    "display_name": "Python 3.8.2 32-bit"
   }
  },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -122,12 +122,8 @@
     }
    ],
    "source": [
-    "def func(v):\n",
-    "    return v + 3\n",
-    "\n",
-    "#import my_module\n",
-    "#print(my_module.func(5))\n",
-    "print(func(5))"
+    "import my_module\n",
+    "print(my_module.func(5))"
    ]
   },
   {
