--- a/6-05.ipynb
+++ b/6-05.ipynb
@@ -10,11 +10,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.2-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1596705588285",
+   "name": "python_defaultSpec_1597735187334",
    "display_name": "Python 3.8.2 32-bit"
   }
  },
@@ -92,19 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stderr",
-     "text": "Python was not found but can be installed from the Microsoft Store: https://go.microsoft.com/fwlink?linkID=2082640\n"
+     "name": "stdout",
+     "text": "__name__: __main__\na = 3, b = 5, sum: 8\n"
     }
    ],
    "source": [
-    "!python3 my_module2.py"
+    "!python my_module2.py"
    ]
   },
   {
@@ -250,15 +250,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stderr",
-     "text": "Python was not found but can be installed from the Microsoft Store: https://go.microsoft.com/fwlink?linkID=2082640\n"
+     "name": "stdout",
+     "text": "Test my_pow(2,5) -> 32, exp: 32 ---- Test OK\n"
     }
    ],
    "source": [
