--- a/5-09.ipynb
+++ b/5-09.ipynb
@@ -10,11 +10,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.2-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1596529743848",
+   "name": "python_defaultSpec_1597906544241",
    "display_name": "Python 3.8.2 32-bit"
   }
  },
@@ -237,21 +237,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[('dummy', 0), ('okuhodakadake', 3190), ('kitadake', 3193), ('fuji', 3776)]"
+      "text/plain": "[('dumy', 0), ('fuji', 2776), ('okhodakadake', 3190), ('kitadake', 3193)]"
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 1
     }
    ],
    "source": [
     "from operator import itemgetter\n",
-    "sorted(mountain_in_japan_dict_items, key=itemgetter(1))"
+    "mountain_in_japan = {'fuji':2776,'kitadake':3193, 'okhodakadake':3190,'dumy':0}\n",
+    "mountain_in_japan_tplist = mountain_in_japan.items()\n",
+    "sorted(mountain_in_japan_tplist, key=itemgetter(1))"
    ]
   },
   {
